--- a/mapa/producao/templates/perfil/perfil_home.html
+++ b/mapa/producao/templates/perfil/perfil_home.html
@@ -18,11 +18,12 @@
                     <td>Retrabalho</td>
                     <td>Largura total</td>
                     <td>Core</td>
-                    <td>Gramagem</td>
+                    <td></td>
+                    <!-- <td>Gramagem</td>
                     <td>Espessura</td>
                     <td>Densidade MP</td>
                     <td>Velocidade</td>
-                    <td>Produção</td>
+                    <td>Produção</td> -->
                 </tr>
                 {% for obj in object_list %}
                 <tr>
@@ -35,11 +36,11 @@
                     {% endif %}
                     <td>{{ obj.largura_bobinagem }}</td>
                     <td>{{ obj.core }}</td>
-                    <td>{{ obj.gramagem }}</td>
+                    <!-- <td>{{ obj.gramagem }}</td>
                     <td>{{ obj.espessura }}</td>
                     <td>{{ obj.densidade_mp }}</td>
                     <td>{{ obj.velocidade }}</td>
-                    <td>{{ obj.producao }}</td>
+                    <td>{{ obj.producao }}</td> -->
                     <td><a href="{% url 'producao:perfil_delete' pk=obj.pk %}" class="btn btn-primary">Apagar</a></td>
                 </tr>
                 {% endfor %}
