--- a/mapa/templates/registration/login.html
+++ b/mapa/templates/registration/login.html
@@ -13,12 +13,12 @@
             </form>
         </div>
         <div class="col-md-6">
-            <h2>Login to record how you are feeling!</h2>
+            <!-- <h2>Login to record how you are feeling!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc hendrerit, enim ut vehicula rhoncus, justo metus
                 efficitur est, ac mollis leo augue sit amet lacus. Curabitur facilisis orci a turpis varius dignissim. Integer
                 sodales turpis tortor, ac commodo lorem gravida at. Sed feugiat mi vel magna pharetra, at feugiat ipsum lobortis.
                 Integer lobortis massa at viverra aliquam. Pellentesque maximus odio non quam consectetur posuere. Aenean
-                nec congue sapien. </p>
+                nec congue sapien. </p> -->
         </div>
     </div>
 </div>
