--- a/mapa/users/templates/users/logout.html
+++ b/mapa/users/templates/users/logout.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h3>You sure?</h3>
+            <h3>Tem a certeza que quer sair?</h3>
             <form method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
@@ -13,8 +13,8 @@
             </form>
         </div>
         <div class="col-md-6">
-            <h3>Come back soon</h3>
-            <p>This site works best if you use it often!</p>
+            <h3>Volte sempre!</h3>
+            
         </div>
 
     </div>
