--- a/mapa/report/templates/report/report_create.html
+++ b/mapa/report/templates/report/report_create.html
@@ -1,15 +1,15 @@
 {% extends "layout.html "%}
 
-{% load producao_tags %}
+{% load report_tags %}
 
 
-{% block title %}Perfil | {{ block.super }}{% endblock %}
+{% block title %}Report | {{ block.super }}{% endblock %}
 {% block content %}
 <div class="container">
-    
+        <h1>Reportar</h1>
     <div class="row">
         <div class="col-md-6">
-            {% perfil_form form %}
+            {% report_form form %}
         </div>
         <div class="col-md-6">
             
