--- a/mapa/producao/templates/producao/bobine_list.html
+++ b/mapa/producao/templates/producao/bobine_list.html
@@ -9,7 +9,7 @@
     </div>
 <div class="container">
     <h1>Bobinagem: {{ bobinagem.nome }}</h1>
-    {% if bobinagem.estado == 'G' %}
+    <!-- {% if bobinagem.estado == 'G' %}
         <h2 id="estado_good">{{ bobinagem.estado }}</h2>
     {% elif bobinagem.estado == 'DM' %}
         <h2 id="estado_dm">{{ bobinagem.estado }}</h2>
@@ -19,7 +19,7 @@
         <h2 id="estado_ba">{{ bobinagem.estado }}</h2>
     {% else %}
         <h2 id="estado_lab">{{ bobinagem.estado }}</h2>
-    {% endif %}
+    {% endif %} -->
     
       <table class="table table-fixed">
           <thead>
