--- a/mapa/producao/templates/producao/bobinagem_home.html
+++ b/mapa/producao/templates/producao/bobinagem_home.html
@@ -13,7 +13,7 @@
                 <table class="table fit">
                         <tr>
                             <th>Bobinagem</th>
-                            <th>Retrabalhada</th>
+                            <!-- <th>Retrabalhada</th> -->
                             <th>Estado</th>
                             <th>Data</th>
                             <th>Inicio</th>
@@ -39,11 +39,11 @@
                         {% if obj.perfil.retrabalho == False %}
                         <tr>
                             <td><a href='{{ obj.get_absolute_url }}'>{{ obj.nome }}</a></td>
-                            {% if obj.perfil.retrabalho == True %}
+                            <!-- {% if obj.perfil.retrabalho == True %}
                                 <td class="check"><span style="color:green"><i class="glyphicon glyphicon-ok"></i></span></td>
                             {% else %}
                                 <td class="check"><span style="color:red"><i class="glyphicon glyphicon-remove"></i></span></td>
-                            {% endif%}
+                            {% endif%} -->
                             {% if obj.estado == "G" %}
                                 <td id="estado_good">{{ obj.estado }}</td>
                             {% elif obj.estado == "DM"%}
@@ -68,7 +68,18 @@
                             <td>{{ obj.perfil.densidade_mp }}</td>
                             <td>{{ obj.perfil.velocidade }}</td>
                             <td>{{ obj.perfil.producao }}</td>                -->
+                            {% if obj.estado == "LAB" %}
+                            <td><a href="{% url 'producao:bobinagem_status' pk=obj.pk operation='ap' %}" class="btn btn-success">Aprovar</a></td>     
+                            <td><a href="{% url 'producao:bobinagem_status' pk=obj.pk operation='rej' %}" class="btn btn-danger">Rejeitar</a></td>   
+                            <td><a href="{% url 'producao:bobinagem_status' pk=obj.pk operation='dm' %}" class="btn btn-warning">DM12</a></td>   
+                            {% else %}
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            {% endif %}
                             {% if user.is_staff %}
+                              
+                            
                             <td><a href="{% url 'producao:bobinagem_delete' pk=obj.pk %}" class="btn btn-primary">Apagar</a></td>     
                             {% else %}
                             <td></td>   
