--- a/mapa/producao/templates/perfil/perfil_detail.html
+++ b/mapa/producao/templates/perfil/perfil_detail.html
@@ -13,7 +13,8 @@
        
        <p>Nº de Bobines:{{ perfil.num_bobines }}</p>
        <p>Largura: {{ perfil.largura_bobinagem }}</p>
-       <p>Diâmetro: {{ perfil.core }}</p>
+       <p>Core: {{ perfil.core }}</p>
+      
        <!-- <p>Core: {{ perfil.gramagem }}</p>
        <p>Espessura: {{ perfil.espessura }}</p>
        <p>Densidade MP: {{ perfil.densidade_mp }}</p>
