--- a/mapa/producao/templates/producao/bobinagem_home.html
+++ b/mapa/producao/templates/producao/bobinagem_home.html
@@ -9,7 +9,7 @@
     <a href="{% url 'home' %}" class="btn btn-primary" role="button">Voltar</a>
     <a href="{% url 'producao:bobinagem_create' %}"  class="btn btn-primary pull-right" role="button">Criar bobinagem</a>
 </div>
-<div class="container table-responsive">
+<div class="container-fluid table-responsive">
     
 
                 <table id="fixed_hdr2" class="table fit">
