--- a/mapa/producao/templates/palete/palete_create.html
+++ b/mapa/producao/templates/palete/palete_create.html
@@ -6,6 +6,7 @@
 {% block title %}Palete | {{ block.super }}{% endblock %}
 {% block content %}
 <div class="container">
+    <h1>Nova palete</h1>
     <div class="row">
         <div class="col-md-6">
             {% palete_form form %}
