--- a/mapa/producao/templates/producao/bobinagem_delete.html
+++ b/mapa/producao/templates/producao/bobinagem_delete.html
@@ -5,10 +5,19 @@
  
     <h1></h1>
     <form action="." method="POST">{% csrf_token %}
-        
+        <h1 id="estado_rejected">Atenção</h1>
         <h3>Ao apagar esta bobinagem, as seguintes bobines serão também apagadas: </h3>
+        <p id="estado_rejected">Se alguma das bobines já estiver designada a uma palete não é aconselhável apagar a bobinagem.</p>
+        <p>{{ bobine.nome }}</p>
+       
         {% for bob in bobine %}
-        <p>{{ bob.nome }}</p>
+       
+        {% if bob.palete != Null %}
+            <p id="estado_rejected">{{ bob.nome }}  - Palete: {{ bob.palete }}</p>
+            
+        {% else %}
+            <p id="estado_rejected">{{ bob.nome }}</p>
+        {% endif %}
         {% endfor %}
         <h1>Têm a certeza que quer apagar a bobinagem {{ object.nome }}?</h1>
         
