--- a/mapa/producao/templates/producao/bobinagem_home.html
+++ b/mapa/producao/templates/producao/bobinagem_home.html
@@ -9,7 +9,7 @@
     <a href="{% url 'home' %}" class="btn btn-primary" role="button">Voltar</a>
     <a href="{% url 'producao:bobinagem_create' %}"  class="btn btn-primary pull-right" role="button">Criar bobinagem</a>
 </div>
-<div class="container-fluid table-responsive">
+<div class="container table-responsive">
     
 
                 <table id="fixed_hdr2" class="table fit">
@@ -21,16 +21,18 @@
                             <th>Fim</th>
                             <th>Duração</th>
                             <th>Core (")</th>
-                            <th>Lote Nonwoven Sup</th>
-                            <th>Lote Nonwoven Inf</th>
-                            <th>Nw Sup (m)</th>
-                            <th>Nw Inf (m)</th>
+                            <!-- <th>Tipo NW Sup</th>
+                            <th>Tipo NW Inf</th>
+                            <th>Lote NW Sup</th>
+                            <th>Lote NW Inf</th> -->
+                            <!-- <th>Nw Sup (m)</th>
+                            <th>Nw Inf (m)</th> -->
                             <th>Comp (m)</th>
                             <th>Comp Emenda (m)</th>
                             <th>Comp Cliente (m)</th>
-                            <th>Desperdicio (m2)</th>
+                            <!-- <th>Desperdicio (m2)</th> -->
                             
-                            <th>Diâmetro (mm)</th>
+                            <!-- <th>Diâmetro (mm)</th> -->
                             <th>Área (m2)</th>
                                                  
 
@@ -59,15 +61,17 @@
                             <td>{{ obj.fim|date:"G:i" }}</td>
                             <td>{{ obj.duracao }}</td>
                             <td>{{ obj.perfil.core }}</td>
-                            <td>{{ obj.lotenwsup }}</td>
+                            <!-- <td>{{ obj.tiponwsup }}</td>
+                            <td>{{ obj.tiponwinf }}</td>
                             <td>{{ obj.lotenwinf }}</td>
-                            <td>{{ obj.nwsup}}</td>
-                            <td>{{ obj.nwinf }}</td>
+                            <td>{{ obj.lotenwinf }}</td> -->
+                            <!-- <td>{{ obj.nwsup}}</td>
+                            <td>{{ obj.nwinf }}</td> -->
                             <td>{{ obj.comp }}</td>
                             <td>{{ obj.comp_par }}</td>
                             <td>{{ obj.comp_cli }}</td>
-                            <td>{{ obj.desper }}</td>
-                            <td>{{ obj.diam }}</td>
+                            <!-- <td>{{ obj.desper }}</td> -->
+                            <!-- <td>{{ obj.diam }}</td> -->
                             <td>{{ obj.area }}</td>
                            
                             {% if obj.estado == "LAB" %}
