--- a/mapa/producao/templates/palete/palete_retrabalho.html
+++ b/mapa/producao/templates/palete/palete_retrabalho.html
@@ -6,7 +6,7 @@
 
 </div>
 <div class="container table-responsive">
-    <H1>Paletes Retrabalho</H1>
+    <H1>Paletes para Retrabalho</H1>
 
     <table class="table fit">
         <tr>
