--- a/mapa/templates/index.html
+++ b/mapa/templates/index.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Bem vindo ao Mapa de Acompanhamento da Produção</h1>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a>
+           <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a> -->
         </p>
     </div>
 </div>
@@ -17,21 +17,21 @@
             <h2>Indicador 1</h2>
             <p>Em construção</p>
             <p>
-                <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+                <!--<a class="btn btn-default" href="#" role="button">View details &raquo;</a> -->
             </p>
         </div>
         <div class="col-md-4">
             <h2>Indicador 2</h2>
             <p>Em construção</p>
             <p>
-                <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+               <!-- <a class="btn btn-default" href="#" role="button">View details &raquo;</a> -->
             </p>
         </div>
         <div class="col-md-4">
             <h2>Indicador 3</h2>
             <p>Em construção</p>
             <p>
-                <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
+               <!-- <a class="btn btn-default" href="#" role="button">View details &raquo;</a> -->
             </p>
         </div>
     </div>
