--- a/mapa/producao/templates/palete/palete_retrabalho.html
+++ b/mapa/producao/templates/palete/palete_retrabalho.html
@@ -1,6 +1,6 @@
 {% extends "layout.html "%} {% block title %}Paletes para retrabalho | {{ block.super }}{% endblock %} {% block content %}
 <div class="container">
-    <a href="{% url 'home' %}" class="btn btn-primary" role="button">Voltar</a>
+    <a href="{% url 'producao:paletes' %}" class="btn btn-primary" role="button">Voltar</a>
     <a href="{% url 'producao:palete_create_retrabalho' %}" class="btn btn-primary pull-right" role="button">Criar palete de retrabalho</a>
 
 
