--- a/mapa/producao/templates/producao/bobinagem_form.html
+++ b/mapa/producao/templates/producao/bobinagem_form.html
@@ -1,14 +1,131 @@
 {% load bootstrap3 %}
 
 <form method="POST" action="{% url 'producao:bobinagem_create' %}" onkeypress="return event.keyCode != 13;">
-    {% bootstrap_form form %}
-    <!-- {% bootstrap_field form.data %}
+    <!--{% bootstrap_form form %}
+    {% bootstrap_field form.data %}
     {% bootstrap_field form.num_bobinagem %}
     {% bootstrap_field form.data %}
     {% bootstrap_field form.data %} -->
-    {% csrf_token %}
-    <a href="{% url 'producao:bobinagens' %}" class="btn btn-primary" role="button">Voltar</a>
-    <input type="submit" class="btn btn-primary" value="Gravar">
+    <div class="container">
+        <h1>Criar bobinagem</h1>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.data %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.inico %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.fim %}
+                    
+                    
+        
+            </div>
+    </div>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.num_bobinagem %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.perfil %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.estado %}
+                    
+                    
+        
+            </div>
+    </div>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.diam %}
+                    
+                    
+        
+            </div>
+            
+    </div>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.comp %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.comp_par %}
+                    
+              </div>
+        
+            
+    </div>
+    <h3>Nonwoven</h3>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.tiponwsup %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.tiponwinf %}
+                    
+                    
+        
+            </div>
+            
+    </div>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.lotenwsup %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.lotenwinf %}
+                    
+                    
+        
+            </div>
+            
+    </div>
+    <div class="row">
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.nwsup %}
+                    
+                    
+        
+            </div>
+            <div class="container col-sm-4">
+                    {% bootstrap_field form.nwinf %}
+                    
+                    
+        
+            </div>
+            
+    </div>
+    </br>
+    <div class="row">    
+            {% csrf_token %}
+            <a href="{% url 'producao:bobinagens' %}" class="btn btn-primary pull-left" role="button">Voltar</a>
+            <input type="submit" class="btn btn-primary pull-right" value="Gravar">
+        </div>
+    
+</div>
+
     
 </form>
 
